unpackaged/main/default/objects/Contact/fields/OPH_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>OPH_Event_Name__c</fullName>
    <description>Used for Pardot Programs and email tempaltes</description>
    <formula>Latest_Open_House_Record__r.conference360__Event_Name__c</formula>
    <label>OPH Event Name</label>
    <type>Text</type>
</CustomField>