unpackaged/main/default/objects/Contact/fields/OPH_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>OPH_Registration_Status__c</fullName>
    <description>Used in PArdot for Open HOuse Programs and Lists</description>
    <formula>TEXT(Latest_Open_House_Record__r.conference360__Registration_Status__c)</formula>
    <label>OPH Registration Status</label>
    <type>Text</type>
</CustomField>