unpackaged/main/default/objects/Contact/fields/OPH_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OPH_Start_Date__c</fullName>
    <description>Used for Pardot Programs and Templates</description>
    <formula>CASE(MONTH(Latest_Open_House_Record__r.conference360__Event_Start_Date__c ), 
  1,&quot;Jan&quot;, 
  2,&quot;Feb&quot;, 
  3,&quot;Mar&quot;, 
  4,&quot;Apr&quot;, 
  5,&quot;May&quot;, 
  6,&quot;Jun&quot;, 
  7,&quot;Jul&quot;, 
  8,&quot;Aug&quot;, 
  9,&quot;Sep&quot;, 
  10,&quot;Oct&quot;, 
  11,&quot;Nov&quot;, 
  12,&quot;Dec&quot;,
  &quot;&quot;) 
&amp; &quot; &quot; &amp; 
  TEXT(DAY( Latest_Open_House_Record__r.conference360__Event_Start_Date__c )) 
&amp; &quot;, &quot; &amp; 
  TEXT(YEAR( Latest_Open_House_Record__r.conference360__Event_Start_Date__c ))</formula>
    <label>OPH Start Date</label>
    <type>Text</type>
</CustomField>