unpackaged/main/default/objects/Contact/fields/OPH_Term__c.field-meta.xml
<CustomField>
    <fullName>OPH_Term__c</fullName>
    <description>Used in formula field to determine if Latest Open House Record and Current Opportunity are in same term</description>
    <formula>Latest_Open_House_Record__r.conference360__Event__r.Term__r.Short_Name__c</formula>
    <label>OPH Term</label>
    <type>Text</type>
</CustomField>