unpackaged/main/default/objects/Contact/fields/OPH_Venue_City__c.field-meta.xml
<CustomField>
    <fullName>OPH_Venue_City__c</fullName>
    <description>Used for Pardot Programs and Email Templates</description>
    <formula>Latest_Open_House_Record__r.conference360__Venue_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPH Venue City</label>
    <type>Text</type>
</CustomField>