unpackaged/main/default/objects/Contact/fields/OPH_Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>OPH_Venue_Name__c</fullName>
    <description>Used by Pardot for Programs and Email Templates</description>
    <formula>Latest_Open_House_Record__r.conference360__Venue_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPH Venue Name</label>
    <type>Text</type>
</CustomField>