unpackaged/main/default/objects/Contact/fields/OPH_Venue_Street__c.field-meta.xml
<CustomField>
    <fullName>OPH_Venue_Street__c</fullName>
    <description>OPH Venue Street</description>
    <formula>Latest_Open_House_Record__r.conference360__Venue_Street__c</formula>
    <label>OPH Venue Street</label>
    <type>Text</type>
</CustomField>