unpackaged/main/default/objects/Contact/fields/Orientation_Event__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the orientation event the student attended in the past. Populated by Flow.</description>
    <inlineHelpText>Lookup to the orientation event the student attended in the past.</inlineHelpText>
    <label>Orientation Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>