unpackaged/main/default/objects/Contact/fields/Pardot_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email Opt Out field to be used with Pardot (MCAE)</description>
    <inlineHelpText>Email Opt Out field to be used with Pardot (MCAE)</inlineHelpText>
    <label>Pardot Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>