unpackaged/main/default/objects/Contact/fields/PCA_Email__c.field-meta.xml
<CustomField>
    <fullName>PCA_Email__c</fullName>
    <description>Display Contact owner&#39;s email on the contact record.</description>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCA Email</label>
    <type>Text</type>
</CustomField>