unpackaged/main/default/objects/Contact/fields/PCA_Name__c.field-meta.xml
<CustomField>
    <fullName>PCA_Name__c</fullName>
    <description>Display Contact Owner full name on contact record</description>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp;  Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCA Name</label>
    <type>Text</type>
</CustomField>