unpackaged/main/default/objects/Contact/fields/PCA_Phone__c.field-meta.xml
<CustomField>
    <fullName>PCA_Phone__c</fullName>
    <description>To display Contact owner&#39;s phone number on Contact record.</description>
    <formula>Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCA Phone</label>
    <type>Text</type>
</CustomField>