unpackaged/main/default/objects/Contact/fields/Placement_Scores__c.field-meta.xml
<CustomField>
    <fullName>Placement_Scores__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>IF( OR ( Current_Opportunity__r.Has_Usable_Placement_Scores_in_All_Areas__c = TRUE, ISPICKVAL( Current_Opportunity__r.DevEd_Exemption_Status__c , &quot;Yes&quot;)), TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Scores</label>
    <type>Checkbox</type>
</CustomField>