unpackaged/main/default/objects/Contact/fields/Presidential_Scholar__c.field-meta.xml
<CustomField>
    <fullName>Presidential_Scholar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by PeopleSoft integration</description>
    <label>Presidential Scholar</label>
    <type>Checkbox</type>
</CustomField>