unpackaged/main/default/objects/Contact/fields/Primary_Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Primary_Academic_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Academic Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Academic_Program_Members</relationshipName>
    <type>Lookup</type>
</CustomField>