unpackaged/main/default/objects/Contact/fields/Primary_Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Primary_Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary educational institution of the contact</description>
    <inlineHelpText>The primary educational institution of the contact</inlineHelpText>
    <label>Primary Educational Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Educational Institution</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Institution Members</relationshipLabel>
    <relationshipName>Institution_Members</relationshipName>
    <type>Lookup</type>
</CustomField>