unpackaged/main/default/objects/Contact/fields/Primary_External_Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Primary_External_Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the main External Educational Institution (Account record) this Contact is associated with.</description>
    <inlineHelpText>Lookup to the main External Educational Institution (Account record) this Contact is associated with.</inlineHelpText>
    <label>Primary External Educational Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Primary External Educational Institution)</relationshipLabel>
    <relationshipName>External_Institution_Members</relationshipName>
    <type>Lookup</type>
</CustomField>