unpackaged/main/default/objects/Contact/fields/Primary_Sports_Organization__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sports_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sports Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization Members</relationshipLabel>
    <relationshipName>Sport_Organization_Members</relationshipName>
    <type>Lookup</type>
</CustomField>