unpackaged/main/default/objects/Contact/fields/Program_Track__c.field-meta.xml
<CustomField>
    <fullName>Program_Track__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Program Track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Algebra</fullName>
            </value>
            <value>
                <fullName>Algebra Through Calculus</fullName>
            </value>
            <value>
                <fullName>Mathematical Thinking in Context</fullName>
            </value>
            <value>
                <fullName>Non-Algebra</fullName>
            </value>
            <value>
                <fullName>Statistical Reasoning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>