unpackaged/main/default/objects/Contact/fields/Prospect_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks potential students being targeted for recruitment and admission</description>
    <label>Prospect/Applicant</label>
    <type>Checkbox</type>
</CustomField>