unpackaged/main/default/objects/Contact/fields/Registered_for_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDC field updated by integration.</description>
    <label>Registered for Orientation (AC)</label>
    <type>Checkbox</type>
</CustomField>