unpackaged/main/default/objects/Contact/fields/Registered_for_Orientation_BT__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_Orientation_BT__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>Current_Opportunity__r.Registered_for_Orientation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered for Orientation (BT)</label>
    <type>Checkbox</type>
</CustomField>