unpackaged/main/default/objects/Contact/fields/Registered_Full_Time_Current_Term__c.field-meta.xml
<CustomField>
    <fullName>Registered_Full_Time_Current_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Registered Full Time Current Term</label>
    <type>Checkbox</type>
</CustomField>