unpackaged/main/default/objects/Contact/fields/Registered_Next_Term_Credit__c.field-meta.xml
<CustomField>
    <fullName>Registered_Next_Term_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sent by Peoplesoft Integration</description>
    <label>Registered Next Term (Credit)</label>
    <type>Checkbox</type>
</CustomField>