unpackaged/main/default/objects/Contact/fields/Rising_Scholar__c.field-meta.xml
<CustomField>
    <fullName>Rising_Scholar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>POpulated by PeopleSoft Integration</description>
    <label>Rising Scholar</label>
    <type>Checkbox</type>
</CustomField>