unpackaged/main/default/objects/Contact/fields/Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>Salary_Grade__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Salary Grade</label>
    <length>2</length>
    <type>Text</type>
</CustomField>