unpackaged/main/default/objects/Contact/fields/Shark_Intake_Results__c.field-meta.xml
<CustomField>
    <fullName>Shark_Intake_Results__c</fullName>
    <description>Link that takes users to Shark Intake Results. Used for SSAs to view results of students that registered for orientation.</description>
    <formula>IF(ISBLANK(Student_Employee_ID__c), 
   NULL, 
   HYPERLINK(
      &#39;http://ssrs.mdc.edu/ReportServer/Pages/ReportViewer.aspx?%2fStudent%2fDirect_Entry_PS%2fCheck+List_ps%2fAdvisorCheckListDetails_ps&amp;rs:Command=Render&amp;StudentMDID=&#39; &amp; Student_Employee_ID__c,
      &#39;Click here for Shark Intake Results&#39;
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shark Intake Results</label>
    <type>Text</type>
</CustomField>