unpackaged/main/default/objects/Contact/fields/simplesms__DoNotSMS__c.field-meta.xml
<CustomField>
    <fullName>simplesms__DoNotSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Messages will not be sent to this Contact.</description>
    <inlineHelpText>Messages will not be sent to this Contact.</inlineHelpText>
    <label>Do Not SMS (Contact)</label>
    <type>Checkbox</type>
</CustomField>