unpackaged/main/default/objects/Contact/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>MDC field for integration</description>
    <inlineHelpText>MDC field for integration</inlineHelpText>
    <label>Source Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>