unpackaged/main/default/objects/Contact/fields/Student_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Student_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Student Assistant</label>
    <type>Checkbox</type>
</CustomField>