unpackaged/main/default/objects/Contact/fields/Student_Campus__c.field-meta.xml
<CustomField>
    <fullName>Student_Campus__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Student Campus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hialeah</fullName>
            </value>
            <value>
                <fullName>Homestead</fullName>
            </value>
            <value>
                <fullName>Kendall</fullName>
            </value>
            <value>
                <fullName>MDC Online</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Padron</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Wolfson</fullName>
            </value>
            <value>
                <fullName>Meek</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>