unpackaged/main/default/objects/Contact/fields/Student_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_Employee_ID__c</fullName>
    <externalId>true</externalId>
    <label>MDID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>