unpackaged/main/default/objects/Contact/fields/Student_Success_Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Advisor_Name__c</fullName>
    <description>[GioM 7/19/2023] Field populated by Flow: Relationship_RTF Update S Success Advisor on Contact to be able to populate the SSA Name on Contact to be utilized by Pardot.</description>
    <label>Student Success Advisor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>