unpackaged/main/default/objects/Contact/fields/Student_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Type__c</fullName>
    <label>Student Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult Education</fullName>
            </value>
            <value>
                <fullName>Associate Seeking</fullName>
            </value>
            <value>
                <fullName>Bachelor Seeking</fullName>
            </value>
            <value>
                <fullName>Career Technical Seeking</fullName>
            </value>
            <value>
                <fullName>Career Technical Seeking Non-Financial Aid Eligible</fullName>
            </value>
            <value>
                <fullName>Certificate of Professional Preparation</fullName>
            </value>
            <value>
                <fullName>Certificate Seeking Financial Aid Eligible</fullName>
            </value>
            <value>
                <fullName>Certificate Seeking Non-Financial Aid Eligible</fullName>
            </value>
            <value>
                <fullName>Continuing Ed &amp; Professional Development</fullName>
            </value>
            <value>
                <fullName>Non-Degree Seeking (not including CE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>