unpackaged/main/default/objects/Contact/fields/SyncToMC__c.field-meta.xml
<CustomField>
    <fullName>SyncToMC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>SyncToMC</label>
    <type>Checkbox</type>
</CustomField>