unpackaged/main/default/objects/Contact/fields/Total_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits_Earned__c</fullName>
    <description>Populated by Peoplesoft Integration</description>
    <label>Total Credits Earned</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>