unpackaged/main/default/objects/Contact/fields/traa_Account_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>traa_Account_Auto_Number__c</fullName>
    <description>Field to create Unique Account Naming Convention for Contact&#39;s with same FirstName and LastName</description>
    <displayFormat>C-{0000}</displayFormat>
    <label>Account Auto Number</label>
    <type>AutoNumber</type>
</CustomField>