unpackaged/main/default/objects/Contact/fields/traa_Alumnus_Alumna__c.field-meta.xml
<CustomField>
    <fullName>traa_Alumnus_Alumna__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates contact has completed a program at the university</description>
    <inlineHelpText>Indicates contact has completed a program at the university</inlineHelpText>
    <label>Alumnus/Alumna</label>
    <type>Checkbox</type>
</CustomField>