unpackaged/main/default/objects/Contact/fields/traa_Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>traa_Country_of_Birth__c</fullName>
    <description>Contact&#39;s country of birth</description>
    <inlineHelpText>Contact&#39;s country of birth</inlineHelpText>
    <label>Country of Birth</label>
    <length>50</length>
    <type>Text</type>
</CustomField>