unpackaged/main/default/objects/Contact/fields/traa_Current_Student__c.field-meta.xml
<CustomField>
    <fullName>traa_Current_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates contact is a current student</description>
    <inlineHelpText>Indicates contact is a current student</inlineHelpText>
    <label>Current Student</label>
    <type>Checkbox</type>
</CustomField>