unpackaged/main/default/objects/Contact/fields/traa_Immigration_Status__c.field-meta.xml
<CustomField>
    <fullName>traa_Immigration_Status__c</fullName>
    <description>Contact&#39;s status of immigration</description>
    <inlineHelpText>Contact&#39;s status of immigration</inlineHelpText>
    <label>Immigration Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>