unpackaged/main/default/objects/Contact/fields/traa_International_Student__c.field-meta.xml
<CustomField>
    <fullName>traa_International_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the contact an international student?</description>
    <inlineHelpText>Is the contact an international student?</inlineHelpText>
    <label>International Student</label>
    <type>Checkbox</type>
</CustomField>