unpackaged/main/default/objects/Contact/fields/traa_Language_for_Communication__c.field-meta.xml
<CustomField>
    <fullName>traa_Language_for_Communication__c</fullName>
    <description>The language that should be used for communications including: Phone Calls, Email and Email Alerts</description>
    <inlineHelpText>The language that should be used for communications including: Phone Calls, Email and Email Alerts</inlineHelpText>
    <label>Language for Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>