unpackaged/main/default/objects/Contact/fields/traa_Student_Number__c.field-meta.xml
<CustomField>
    <fullName>traa_Student_Number__c</fullName>
    <description>Contact&#39;s student number at the university</description>
    <externalId>true</externalId>
    <inlineHelpText>Contact&#39;s student number at the university</inlineHelpText>
    <label>Student Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>