unpackaged/main/default/objects/Contact/fields/USE_PS_ID__c.field-meta.xml
<CustomField>
    <fullName>USE_PS_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDC field for integration</description>
    <label>USE_PS_ID</label>
    <type>Checkbox</type>
</CustomField>