unpackaged/main/default/objects/Contact/fields/UTM_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>UTM_Account_Code__c</fullName>
    <description>UTM Account Code to be used with Pardot. Populated whenever a lead is converted. Used with Inquiry Forms that use Account Id as UTM Code, such as School Specific/Campus Specific Forms.</description>
    <label>UTM Account Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>