unpackaged/main/default/objects/Contact/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <label>Visa Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>