unpackaged/main/default/objects/Contact/validationRules/Restrict_Name_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Name_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Student_Employee_ID__c)),
OR(
ISCHANGED( FirstName ),
ISCHANGED( MiddleName ),
ISCHANGED ( LastName )  
),
$Permission.Contact_Name_Update  &lt;&gt; TRUE 
)</errorConditionFormula>
    <errorMessage>Name cannot be changed once Student/Employee ID is populated.</errorMessage>
</ValidationRule>