unpackaged/main/default/objects/Contact/validationRules/traa_Contact_Birthday_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>traa_Contact_Birthday_Validation</fullName>
    <active>true</active>
    <description>Birthday can never be greater than today.</description>
    <errorConditionFormula>Birthdate &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>Birthday should be less than today. Future dates are not allowed.</errorMessage>
</ValidationRule>