unpackaged/main/default/objects/Contact/listViews/Homestead_Contacts.listView-meta.xml
<ListView>
    <fullName>Homestead_Contacts</fullName>
    <columns>Student_Employee_ID__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Current_Opportunity__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Student_Type__c</columns>
    <columns>PCA_Name__c</columns>
    <columns>Onboarding_Task_Completion__c</columns>
    <columns>Completed_FOA__c</columns>
    <columns>Completed_Shark_Intake__c</columns>
    <columns>Eligible_for_In_State_Fees__c</columns>
    <columns>Placement_Scores__c</columns>
    <columns>Official_HS_Transcript_Received__c</columns>
    <columns>Registered_for_Orientation__c</columns>
    <columns>Last_Term_Enrolled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Onboarding_Cohort__c</field>
        <operation>equals</operation>
        <value>2247</value>
    </filters>
    <label>2247 Onboarding Cohort (Filter for PCA)</label>
</ListView>