unpackaged/main/default/objects/Contact/listViews/inquiry_form.listView-meta.xml
<ListView>
    <fullName>inquiry_form</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>pi__campaign__c</columns>
    <columns>pi__created_date__c</columns>
    <columns>pi__last_activity__c</columns>
    <columns>Current_Opportunity__c</columns>
    <columns>Prospect_Applicant__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>MDC Info Center</value>
    </filters>
    <label>Info Center Inquiry Form</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>